# pyramid_saml2

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: idp.py
pyramid_saml2/: __init__.py  exceptions.py  signing.py  utils.py  xml_parser.py  xml_templates.py
pyramid_saml2/idp/: idp.py  parser.py  sphandler.py  views.py  xml_templates.py
pyramid_saml2/idp/templates/: base.jinja2  logged_out.html  logged_out.jinja2  login.html  login.jinja2
tests/: conftest.py  test_codex.py  test_exceptions.py  test_idp.py  test_includeme.py  test_parser.py  test_signing.py  test_utils.py  test_views.py  test_xml_parser.py  test_xml_templates.py
